:bug: Correct css

--- a/src/L.Control.SwitchScaleControl.css
+++ b/src/L.Control.SwitchScaleControl.css
@@ -15,7 +15,7 @@
   padding: 2px 5px 1px;
   background: rgba(255, 255, 255, 0.7);
   text-align: center;
-  width: 5em;
+  width: 60%;
 }
 
 .map-control-scalebar-custom-scale {
